--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/roboto": "^4.5.1",
+    "@fontsource/suez-one": "^4.5.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "@testing-library/jest-dom": "^5.16.1",
