updated project cards

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pham-andrew.github.io/andrewpham.games",
+  "homepage": "https://andrewpham.games",
   "name": "andrewpham.games",
   "version": "0.1.0",
   "private": true,
